Add Adyen service

--- a/apps/store/.env.local.example
+++ b/apps/store/.env.local.example
@@ -53,3 +53,7 @@ FALLBACK_ORIGIN_URL=https://www.dev.hedvigit.com
 NEXT_PUBLIC_EXPERIMENT_ID=<experiment-id>
 
 NEXT_PUBLIC_INSURELY_CUSTOMER_ID=
+
+# Adyen
+NEXT_PUBLIC_ADYEN_ENVIRONMENT=<test|live>
+NEXT_PUBLIC_ADYEN_CLIENT_KEY=
