--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -20,6 +20,7 @@
     "scan-translations": "yarn i18next && yarn dlx i18next-v4-format-converter public/locales"
   },
   "dependencies": {
+    "@adyen/adyen-web": "3.23.0",
     "@apollo/client": "3.7.17",
     "@datadog/browser-logs": "4.45.0",
     "@emotion/react": "11.11.1",
