Setup Apollo Client in App Router

--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -21,7 +21,8 @@
   },
   "dependencies": {
     "@adyen/adyen-web": "3.23.0",
-    "@apollo/client": "3.7.17",
+    "@apollo/client": "rc",
+    "@apollo/experimental-nextjs-app-support": "0.4.1",
     "@datadog/browser-logs": "4.46.0",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
