--- a/apps/store/.env.local.example
+++ b/apps/store/.env.local.example
@@ -41,6 +41,7 @@ NEXT_PUBLIC_FEATURE_ENGLISH_LANGUAGE=true
 NEXT_PUBLIC_FEATURE_COUNTRY_SELECTOR=true
 NEXT_PUBLIC_FEATURE_SAS_PARTNERSHIP=true
 FEATURE_DEBUGGER=<true>
+FEATURE_PARTNER_AUTO_CONFIRM=<true>
 
 # Vercel Edge Config Connection String (https://github.com/vercel/edge-config)
 EDGE_CONFIG=
