--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -3,6 +3,9 @@
   "extends": ["config:base"],
   "schedule": ["after 10pm every weekday", "before 5am every weekday", "every weekend"],
   "labels": ["needs approval/merge"],
+  // Don't update nextjs until client-side navigation issue is solved
+  // https://github.com/vercel/next.js/issues/53967
+  "ignoreDeps": ["next", "eslint-config-next", "@next/bundle-analyzer"],
   "packageRules": [
     {
       "matchDepTypes": ["dependencies"],
