--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,7 +1,8 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
-  "schedule": ["after 10pm every weekday", "before 5am every weekday", "every weekend"],
+  // Restrict automerge to business hours so that we can react quickly if something goes wrong
+  "automergeSchedule": ["every weekday between 9:30 and 5:30"],
   "labels": ["needs approval/merge"],
   // Don't update nextjs until client-side navigation issue is solved
   // https://github.com/vercel/next.js/issues/53967
