--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -45,6 +45,7 @@
     "apollo-link-timeout": "4.0.0",
     "clone-deep": "4.0.1",
     "cookies-next": "2.1.2",
+    "date-fns": "2.30.0",
     "downshift": "8.1.0",
     "framer-motion": "10.16.0",
     "graphql": "16.8.0",
