Rennovate: ignore adyen SDK

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -6,7 +6,7 @@
   "labels": ["needs approval/merge"],
   // Don't update nextjs until client-side navigation issue is solved
   // https://github.com/vercel/next.js/issues/53967
-  "ignoreDeps": ["next", "eslint-config-next", "@next/bundle-analyzer"],
+  "ignoreDeps": ["next", "eslint-config-next", "@next/bundle-analyzer", "@adyen/adyen-web"],
   "packageRules": [
     {
       "matchDepTypes": ["dependencies"],
