Add function and feature flag for custom asset domain

--- a/apps/store/.env.local.example
+++ b/apps/store/.env.local.example
@@ -40,6 +40,7 @@ NEXT_PUBLIC_FEATURE_INSURELY=<true>
 NEXT_PUBLIC_FEATURE_ENGLISH_LANGUAGE=true
 NEXT_PUBLIC_FEATURE_COUNTRY_SELECTOR=true
 NEXT_PUBLIC_FEATURE_SAS_PARTNERSHIP=true
+NEXT_PUBLIC_FEATURE_CUSTOM_ASSET_DOMAIN=true
 FEATURE_DEBUGGER=<true>
 FEATURE_PARTNER_AUTO_CONFIRM=<true>
 
