Try new renovate schedule, old one was not keeping up

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -3,7 +3,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
   // Restrict automerge so we can react quickly if something goes wrong (UTC time = 09:00 CEST)
-  "automergeSchedule": ["before 7am every weekday"],
+  "schedule": ["7am every weekday", "8am every weekday", "9am every weekday"],
   "labels": ["needs approval/merge"],
   // Don't update nextjs until client-side navigation issue is solved
   // https://github.com/vercel/next.js/issues/53967
