--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,6 +1,6 @@
 defaultSemverRangePrefix: ""
 
-nodeLinker: node-modules
+nodeLinker: pnp
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
