Quick and dirty member page and login page placeholder

--- a/apps/store/graphql.config.yml
+++ b/apps/store/graphql.config.yml
@@ -1,7 +1,7 @@
 schema: schema.graphql
 include:
   - schema.graphql
-  - src/graphql/*.graphql
+  - src/*.graphql
 extensions:
   endpoints:
     dev:
