--- a/apps/store/.env.local.example
+++ b/apps/store/.env.local.example
@@ -39,6 +39,7 @@ SKIP_BUILD_STATIC_GENERATION=<true>
 NEXT_PUBLIC_FEATURE_INSURELY=<true>
 NEXT_PUBLIC_FEATURE_ENGLISH_LANGUAGE=true
 NEXT_PUBLIC_FEATURE_COUNTRY_SELECTOR=true
+NEXT_PUBLIC_FEATURE_MEMBER_AREA=true
 NEXT_PUBLIC_FEATURE_SAS_PARTNERSHIP=true
 NEXT_PUBLIC_FEATURE_CUSTOM_ASSET_DOMAIN=true
 FEATURE_DEBUGGER=<true>
