--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -42,6 +42,7 @@
     "@storyblok/react": "2.4.7",
     "@types/uuid": "9.0.5",
     "@vercel/edge-config": "0.4.1",
+    "@vercel/kv": "0.2.3",
     "@vercel/otel": "0.3.0",
     "ajv": "8.12.0",
     "apollo-link-timeout": "4.0.0",
