GEN-1255 | Disable Vercel deployments for assets branch

--- a/apps/store/vercel.json
+++ b/apps/store/vercel.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://openapi.vercel.sh/vercel.json",
   "framework": "nextjs",
   "buildCommand": "cd ../.. && yarn turbo run codegen --filter=store --force && STORYBLOK_CACHE_VERSION=$(node ./apps/store/scripts/storyblok-cache-version.js) yarn turbo run build --filter=store && ./apps/store/scripts/upload-sourcemaps-vercel.sh",
   "ignoreCommand": "../../bin/vercel-ignore-step.sh",
@@ -6,5 +7,10 @@
   "regions": ["arn1"],
   "github": {
     "autoJobCancelation": true
+  },
+  "git": {
+    "deploymentEnabled": {
+      "assets": false
+    }
   }
 }
