--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -103,6 +103,7 @@
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
     "babel-loader": "9.1.3",
+    "dotenv": "16.3.1",
     "eslint": "8.51.0",
     "eslint-config-custom": "workspace:",
     "eslint-config-next": "13.4.12",
