--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-jest": "27.4.2",
     "eslint-plugin-testing-library": "6.0.1",
     "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "storybook": "7.4.5",
     "ts-jest": "29.1.1",
     "tsconfig": "workspace:",
