--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,7 +1,15 @@
 {
   "extends": "tsconfig/react-library.json",
-  "include": [".", "./jest-setup.ts"],
-  "exclude": ["dist", "build", "node_modules"],
+  "include": [
+    ".",
+    "./.eslintrc.js",
+    "./jest-setup.ts"
+  ],
+  "exclude": [
+    "dist",
+    "build",
+    "node_modules"
+  ],
   "compilerOptions": {
     "moduleResolution": "node"
   }
