Disable build for datadot-ci -> sh2 -> cpu-features dependency which is optional and does not declare node-gyp it uses, leading to noisy warnings

--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
     "prettier": "3.0.3",
     "turbo": "1.10.14",
     "typescript": "5.2.2"
+  },
+  "dependenciesMeta": {
+    "cpu-features": {
+      "built": false
+    }
   }
 }
