--- a/package.json
+++ b/package.json
@@ -43,6 +43,14 @@
   "dependenciesMeta": {
     "cpu-features": {
       "built": false
+    },
+    "ssh2": {
+      "built": false
+    }
+  },
+  "peerDependenciesMeta": {
+    "webpack": {
+      "optional": true
     }
   }
 }
