Skip node-gyp build for ssh2 and cpu-features (save ~15s during CI)

--- a/package.json
+++ b/package.json
@@ -47,5 +47,10 @@
     "ssh2": {
       "built": false
     }
+  },
+  "peerDependenciesMeta": {
+    "webpack": {
+      "optional": true
+    }
   }
 }
