--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -9,3 +9,7 @@ plugins:
     spec: "https://raw.githubusercontent.com/mhassan1/yarn-plugin-licenses/v0.8.1/bundles/@yarnpkg/plugin-licenses.js"
 
 yarnPath: .yarn/releases/yarn-3.6.4.cjs
+
+# Make Vercel build cache see yarn cache
+# https://vercel.com/docs/deployments/troubleshoot-a-build#what-is-cached
+cacheFolder: ./node_modules/.cache/yarn
