--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -76,6 +76,7 @@
     "@babel/preset-react": "7.22.15",
     "@babel/preset-typescript": "7.22.15",
     "@datadog/datadog-ci": "2.22.0",
+    "@emotion/babel-plugin": "11.11.0",
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/typescript": "4.0.1",
     "@graphql-codegen/typescript-operations": "4.0.1",
@@ -116,6 +117,7 @@
     "jest-environment-jsdom": "29.7.0",
     "msw": "1.3.2",
     "next-router-mock": "0.9.10",
+    "path-browserify": "1.0.1",
     "prettier": "3.0.3",
     "storybook": "7.4.5",
     "storybook-addon-apollo-client": "5.0.0",
@@ -123,6 +125,7 @@
     "ts-jest": "29.1.1",
     "tsconfig": "workspace:",
     "typescript": "5.2.2",
+    "webpack": "5.76.2",
     "whatwg-fetch": "3.6.19"
   },
   "msw": {
