Fix typescript error in ui by declaring DOM lib

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -11,6 +11,11 @@
     "node_modules"
   ],
   "compilerOptions": {
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ]
   }
 }
