--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -22,5 +22,10 @@
     }
   ],
   "prCreation": "not-pending",
+  "prConcurrentLimit": 12,
+  // Default: 2, this is way too low for trying to go through daily PR flow in short window
+  // Effectively we may have only 1-2 renovate during daily window, so let's jam all valid PRs
+  // ASAP. Set a limit here if we observe long build queue that interferes with daily work
+  "prHourlyLimit": 0,
   "stabilityDays": 2
 }
