--- a/apps/store/.env.local.example
+++ b/apps/store/.env.local.example
@@ -44,6 +44,7 @@ NEXT_PUBLIC_FEATURE_SAS_PARTNERSHIP=true
 NEXT_PUBLIC_FEATURE_CUSTOM_ASSET_DOMAIN=true
 FEATURE_DEBUGGER=<true>
 FEATURE_PARTNER_AUTO_CONFIRM=<true>
+NEXT_PUBLIC_FEATURE_INSURELY_NATIVE_SUCCESS=<true>
 
 # Vercel Edge Config Connection String (https://github.com/vercel/edge-config)
 EDGE_CONFIG=
