--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -28,7 +28,7 @@
       "labels": ["dev-deps"]
     }
   ],
-  "prCreation": "not-pending",
+  "prCreation": "immediate",
   "prConcurrentLimit": 12,
   // Default: 2, this is way too low for trying to go through daily PR flow in short window
   // Effectively we may have only 1-2 renovate during daily window, so let's jam all valid PRs
