--- a/apps/store/tsconfig.json
+++ b/apps/store/tsconfig.json
@@ -1,22 +1,46 @@
 {
-  "exclude": ["node_modules"],
-  "extends": "tsconfig/nextjs.json",
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "exclude": [
+    "node_modules"
+  ],
   "compilerOptions": {
     "rootDir": ".",
     "outDir": "dist",
     "baseUrl": "src",
     "paths": {
-      "@/lib/*": ["lib/*"],
-      "@/blocks/*": ["blocks/*"],
-      "@/components/*": ["components/*"],
-      "@/pages/*": ["pages/*"],
-      "@/styles/*": ["styles/*"],
-      "@/services/*": ["services/*"],
-      "@/hooks/*": ["hooks/*"],
-      "@/test/*": ["test/*"],
-      "@/utils/*": ["utils/*"],
-      "@/features/*": ["features/*"],
-      "@/mocks/*": ["mocks/*"]
+      "@/lib/*": [
+        "lib/*"
+      ],
+      "@/blocks/*": [
+        "blocks/*"
+      ],
+      "@/components/*": [
+        "components/*"
+      ],
+      "@/pages/*": [
+        "pages/*"
+      ],
+      "@/styles/*": [
+        "styles/*"
+      ],
+      "@/services/*": [
+        "services/*"
+      ],
+      "@/hooks/*": [
+        "hooks/*"
+      ],
+      "@/test/*": [
+        "test/*"
+      ],
+      "@/utils/*": [
+        "utils/*"
+      ],
+      "@/features/*": [
+        "features/*"
+      ],
+      "@/mocks/*": [
+        "mocks/*"
+      ]
     },
     "incremental": true,
     "plugins": [
@@ -24,7 +48,29 @@
         "name": "next"
       }
     ],
-    "strictNullChecks": true
+    "target": "ESNext",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "noEmit": true,
+    "strict": true,
+    "composite": false,
+    "esModuleInterop": true,
+    "preserveWatchOutput": true,
+    "skipLibCheck": true,
+    "jsx": "preserve",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext"
   },
-  "include": ["src", "*.d.ts", ".next/types/**/*.ts"]
+  "include": [
+    "src",
+    "*.d.ts",
+    ".next/types/**/*.ts"
+  ]
 }
