--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "analyze-bundle": "ANALYZE=true next build",
     "dev": "next dev --port 8040",
-    "build": "next build",
+    "build": "next build --no-lint",
     "start": "next start",
     "test": "jest --passWithNoTests --coverage",
     "lint": "next lint",
