Fix next build error that failed on missing dependency

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -13,3 +13,9 @@ yarnPath: .yarn/releases/yarn-3.6.4.cjs
 # Make Vercel build cache see yarn cache
 # https://vercel.com/docs/deployments/troubleshoot-a-build#what-is-cached
 cacheFolder: ./node_modules/.cache/yarn
+
+# Declare missing dependencies to solve 'module not found' errors
+packageExtensions:
+  "@apollo/experimental-nextjs-app-support@*":
+    dependencies:
+      graphql: "*"
