--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+      # Renovate needs to see test status before PR is created
+      - 'renovate/**'
   pull_request:
     types: [opened, synchronize]
   # Allows you to run this workflow manually from the Actions tab
