--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -10,7 +10,10 @@
 
   // Do not create PRs for changes than will be automerged
   // https://docs.renovatebot.com/key-concepts/automerge/#branch-vs-pr-automerging
-  automergeType: "branch",
+//  automergeType: "branch",
+
+  // TEMP: Force creating pending branches
+  "prCreation": "immediate",
 
   "labels": ["needs approval/merge"],
   "ignoreDeps": [
