Revert "Temp: update renovate settings to force creation of pending PRs"
This reverts commit fc152624ca9317cfc51f402e14f7b83914b5bae9.

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -10,10 +10,7 @@
 
   // Do not create PRs for changes than will be automerged
   // https://docs.renovatebot.com/key-concepts/automerge/#branch-vs-pr-automerging
-//  automergeType: "branch",
-
-  // TEMP: Force creating pending branches
-  "prCreation": "immediate",
+  automergeType: "branch",
 
   "labels": ["needs approval/merge"],
   "ignoreDeps": [
