chore(product-reviews): include vercel/kv env vars into example file

--- a/apps/store/.env.local.example
+++ b/apps/store/.env.local.example
@@ -49,6 +49,12 @@ NEXT_PUBLIC_FEATURE_INSURELY_NATIVE_SUCCESS=<true>
 # Vercel Edge Config Connection String (https://github.com/vercel/edge-config)
 EDGE_CONFIG=
 
+# Vercel KV
+KV_URL=
+KV_REST_API_URL=
+KV_REST_API_TOKEN=
+KV_REST_API_READ_ONLY_TOKEN=
+
 # Trustpilot
 NEXT_PUBLIC_TRUSTPILOT_HEDVIG_BUSINESS_UNIT_ID=
 TRUSTPILOT_API_KEY=
