--- a/apps/store/.env.local.example
+++ b/apps/store/.env.local.example
@@ -46,6 +46,7 @@ FEATURE_DEBUGGER=<true>
 FEATURE_PARTNER_AUTO_CONFIRM=<true>
 NEXT_PUBLIC_FEATURE_INSURELY_NATIVE_SUCCESS=<true>
 NEXT_PUBLIC_FEATURE_STORYBLOK_REDIRECTS=<true>
+NEXT_PUBLIC_FEATURE_CUSTOM_CHAT=<true>
 
 # Vercel Edge Config Connection String (https://github.com/vercel/edge-config)
 EDGE_CONFIG=
