Debug: show yarn version

--- a/apps/store/vercel.json
+++ b/apps/store/vercel.json
@@ -3,7 +3,7 @@
   "framework": "nextjs",
   "buildCommand": "cd ../.. && yarn turbo run codegen --filter=store --force && STORYBLOK_CACHE_VERSION=$(node ./apps/store/scripts/storyblok-cache-version.js) yarn turbo run build --filter=store && ./apps/store/scripts/upload-sourcemaps-vercel.sh",
   "ignoreCommand": "../../bin/vercel-ignore-step.sh",
-  "installCommand": "cd ../.. && YARN_CACHE_FOLDER=./.next/cache/yarn-cache yarn install --immutable",
+  "installCommand": "cd ../.. && YARN_CACHE_FOLDER=./.next/cache/yarn-cache yarn install --immutable && yarn --version",
   "regions": ["arn1"],
   "github": {
     "autoJobCancelation": true
