--- a/apps/store/.env.local.example
+++ b/apps/store/.env.local.example
@@ -68,3 +68,6 @@ NEXT_PUBLIC_INSURELY_CUSTOMER_ID=
 # Adyen
 NEXT_PUBLIC_ADYEN_ENVIRONMENT=<test|live>
 NEXT_PUBLIC_ADYEN_CLIENT_KEY=
+
+# Rapio
+RAPIO_USERNAME=
