Trial Debugger | Support all Hedvig Included partners

--- a/apps/store/.env.local.example
+++ b/apps/store/.env.local.example
@@ -69,5 +69,9 @@ NEXT_PUBLIC_INSURELY_CUSTOMER_ID=
 NEXT_PUBLIC_ADYEN_ENVIRONMENT=<test|live>
 NEXT_PUBLIC_ADYEN_CLIENT_KEY=
 
-# Rapio
-RAPIO_USERNAME=
+# Rapio (Hedvig Included Partners)
+RAPIO_USERNAME_AVY=
+RAPIO_USERNAME_STENA_FASTIGHETER=
+RAPIO_USERNAME_HEDVIG=
+RAPIO_USERNAME_BYGGVESTA=
+RAPIO_USERNAME_SAMTRYGG=
