Car dealership validation form

--- a/apps/store/.env.local.example
+++ b/apps/store/.env.local.example
@@ -75,3 +75,9 @@ RAPIO_USERNAME_STENA_FASTIGHETER=
 RAPIO_USERNAME_HEDVIG=
 RAPIO_USERNAME_BYGGVESTA=
 RAPIO_USERNAME_SAMTRYGG=
+
+RAPIO_API_BASE_URL=
+RAPIO_USERNAME_CAR_TRIAL_VALIDATION=
+RAPIO_PASSWORD_CAR_TRIAL_VALIDATION=
+CAR_TRIAL_VALIDATION_USERNAME=
+CAR_TRIAL_VALIDATION_PASSWORD=
