GEN-1656 | Widget Cancellation Functionality

--- a/apps/store/.env.local.example
+++ b/apps/store/.env.local.example
@@ -49,6 +49,7 @@ NEXT_PUBLIC_FEATURE_STORYBLOK_REDIRECTS=<true>
 NEXT_PUBLIC_FEATURE_CUSTOM_CHAT=<true>
 NEXT_PUBLIC_FEATURE_DAY_PICKER=<true>
 NEXT_PUBLIC_FEATURE_QUICK_ADD_BUNDLE_VIEW=<true>
+NEXT_PUBLIC_FEATURE_WIDGET_SWITCH=<true>
 
 # Vercel Edge Config Connection String (https://github.com/vercel/edge-config)
 EDGE_CONFIG=
