Vanilla-extract support in NextJs and Storybook

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -53,6 +53,8 @@
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
     "@radix-ui/react-dialog": "1.0.5",
+    "@vanilla-extract/css": "1.14.1",
+    "clsx": "2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-wrap-balancer": "1.1.0"
