--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -46,6 +46,7 @@
     "@storyblok/js": "3.0.6",
     "@storyblok/react": "3.0.8",
     "@types/uuid": "9.0.8",
+    "@vanilla-extract/css": "1.14.1",
     "@vercel/edge-config": "0.4.1",
     "@vercel/kv": "1.0.1",
     "@vercel/otel": "1.2.1",
@@ -114,6 +115,8 @@
     "@types/react-dom": "18.2.18",
     "@typescript-eslint/eslint-plugin": "6.20.0",
     "@typescript-eslint/parser": "6.20.0",
+    "@vanilla-extract/next-plugin": "2.3.5",
+    "@vanilla-extract/webpack-plugin": "2.3.4",
     "babel-loader": "9.1.3",
     "dotenv": "16.4.1",
     "eslint": "8.56.0",
@@ -126,6 +129,7 @@
     "i18next-parser": "8.12.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
+    "mini-css-extract-plugin": "2.7.7",
     "msw": "2.1.6",
     "next-router-mock": "0.9.11",
     "path-browserify": "1.0.1",
