--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -64,6 +64,7 @@
     "next-i18next": "15.2.0",
     "nprogress": "0.2.0",
     "personnummer": "3.2.1",
+    "qrcode.react": "3.1.0",
     "react": "18.2.0",
     "react-day-picker": "8.10.0",
     "react-dom": "18.2.0",
