Explicitly designate CommonJS and ESM files with cjs/mjs extensions

--- a/apps/store/tsconfig.json
+++ b/apps/store/tsconfig.json
@@ -5,17 +5,39 @@
     "outDir": "dist",
     "baseUrl": "src",
     "paths": {
-      "@/lib/*": ["lib/*"],
-      "@/blocks/*": ["blocks/*"],
-      "@/components/*": ["components/*"],
-      "@/pages/*": ["pages/*"],
-      "@/styles/*": ["styles/*"],
-      "@/services/*": ["services/*"],
-      "@/hooks/*": ["hooks/*"],
-      "@/test/*": ["test/*"],
-      "@/utils/*": ["utils/*"],
-      "@/features/*": ["features/*"],
-      "@/mocks/*": ["mocks/*"]
+      "@/lib/*": [
+        "lib/*"
+      ],
+      "@/blocks/*": [
+        "blocks/*"
+      ],
+      "@/components/*": [
+        "components/*"
+      ],
+      "@/pages/*": [
+        "pages/*"
+      ],
+      "@/styles/*": [
+        "styles/*"
+      ],
+      "@/services/*": [
+        "services/*"
+      ],
+      "@/hooks/*": [
+        "hooks/*"
+      ],
+      "@/test/*": [
+        "test/*"
+      ],
+      "@/utils/*": [
+        "utils/*"
+      ],
+      "@/features/*": [
+        "features/*"
+      ],
+      "@/mocks/*": [
+        "mocks/*"
+      ]
     },
     "incremental": true,
     "plugins": [
@@ -24,7 +46,11 @@
       }
     ],
     "target": "ESNext",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "noEmit": true,
     "strict": true,
@@ -38,6 +64,14 @@
     "forceConsistentCasingInFileNames": true,
     "module": "esnext"
   },
-  "include": ["src", "*.d.ts", ".next/types/**/*.ts", "codegen.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "src",
+    "*.d.ts",
+    ".next/types/**/*.ts",
+    "./codegen.ts",
+    "./jest-setup.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
