--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "eslint-config-custom",
   "version": "0.0.0",
-  "main": "eslint-config-custom.js",
+  "main": "eslint-config-custom.cjs",
   "license": "MIT",
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "6.20.0",
