--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "*.md": [
       "prettier --ignore-unknown --write"
     ],
-    "*.{js,jsx,ts,tsx}": [
+    "*.{js,jsx,ts,tsx,cjs,mjs}": [
       "prettier --ignore-unknown --write",
       "eslint --fix"
     ]
