--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "racoon",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "workspaces": [
     "packages/*",
     "apps/*"
