--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ui",
   "version": "0.0.0",
+  "private": true,
+  "license": "MIT",
+  "type": "module",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "sideEffects": false,
-  "private": true,
-  "license": "MIT",
   "files": [
     "dist/**",
     "fonts/**"
