Use vanilla-extract vars to replace remaining vars from globalStyles

--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -47,12 +47,14 @@
     "@storyblok/react": "3.0.8",
     "@types/uuid": "9.0.8",
     "@vanilla-extract/css": "1.14.1",
+    "@vanilla-extract/dynamic": "2.1.0",
     "@vercel/edge-config": "0.4.1",
     "@vercel/kv": "1.0.1",
     "@vercel/otel": "1.2.1",
     "ajv": "8.12.0",
     "apollo-link-timeout": "4.0.0",
     "clone-deep": "4.0.1",
+    "clsx": "2.1.0",
     "cookies-next": "4.1.1",
     "date-fns": "3.3.1",
     "downshift": "8.3.1",
