--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -68,6 +68,7 @@
     "qrcode.react": "3.1.0",
     "react": "18.2.0",
     "react-day-picker": "8.10.0",
+    "react-device-detect": "2.2.3",
     "react-dom": "18.2.0",
     "react-i18next": "14.0.3",
     "react-wrap-balancer": "1.1.0",
