Move I18NEXT_DEFAULT_CONFIG_PATH to .env

--- a/apps/store/.env
+++ b/apps/store/.env
@@ -2,3 +2,5 @@
 
 NEXT_PUBLIC_GRAPHQL_ENDPOINT=https://apollo-router.dev.hedvigit.com
 NEXT_PUBLIC_AUTH_ENDPOINT=https://auth.dev.hedvigit.com
+# Override import path used in next-i18next/serverSideTranslations
+I18NEXT_DEFAULT_CONFIG_PATH = './next-i18next.config.cjs'
