--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -48,7 +48,8 @@
     "@types/uuid": "9.0.8",
     "@vanilla-extract/css": "1.14.1",
     "@vanilla-extract/dynamic": "2.1.0",
-    "@vercel/edge-config": "1.0.0",
+    "@vanilla-extract/sprinkles": "1.6.1",
+    "@vercel/edge-config": "0.4.1",
     "@vercel/kv": "1.0.1",
     "@vercel/otel": "1.2.1",
     "ajv": "8.12.0",
