--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -54,6 +54,7 @@
     "@emotion/styled": "11.11.0",
     "@radix-ui/react-dialog": "1.0.5",
     "@vanilla-extract/css": "1.14.1",
+    "@vanilla-extract/sprinkles": "1.6.1",
     "clsx": "2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
