--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -76,6 +76,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "14.0.5",
     "react-wrap-balancer": "1.1.0",
+    "server-only": "0.0.1",
     "storyblok-rich-text-react-renderer": "2.9.1",
     "tss-react": "4.9.4",
     "ui": "workspace:",
