--- a/apps/store/tsconfig.json
+++ b/apps/store/tsconfig.json
@@ -60,7 +60,7 @@
     "jsx": "preserve",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "forceConsistentCasingInFileNames": true,
     "module": "esnext"
   },
