--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -34,6 +34,7 @@
     "@opentelemetry/api": "1.7.0",
     "@opentelemetry/api-logs": "0.48.0",
     "@radix-ui/react-accordion": "1.1.2",
+    "@radix-ui/react-checkbox": "1.0.4",
     "@radix-ui/react-collapsible": "1.0.3",
     "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-navigation-menu": "1.1.4",
