add debugger for car trial

--- a/apps/store/.env.local.example
+++ b/apps/store/.env.local.example
@@ -81,5 +81,7 @@ RAPIO_USERNAME_SAMTRYGG=
 RAPIO_API_BASE_URL=
 RAPIO_USERNAME_CAR_TRIAL_VALIDATION=
 RAPIO_PASSWORD_CAR_TRIAL_VALIDATION=
+RAPIO_USERNAME_CAR_TRIAL_DEBUGGER=
+RAPIO_PASSWORD_CAR_TRIAL_DEBUGGER=
 CAR_TRIAL_VALIDATION_USERNAME=
 CAR_TRIAL_VALIDATION_PASSWORD=
